# VaultSim

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  setup.sh  test_e2e.html
.github/workflows/: cd.yml  ci.yml
ai_service/: Dockerfile  pyproject.toml
ai_service/src/: main.py
ai_service/src/agents/: judge.py  persona.py
ai_service/src/api/: game_pb2.py  game_pb2_grpc.py  grpc_server.py
ai_service/src/core/: config.py
ai_service/src/db/: models.py  seed.py  session.py
ai_service/tests/: conftest.py  test_agents.py
gateway/: Dockerfile  go.mod  go.sum
gateway/cmd/server/: main.go
gateway/internal/config/: config.go
gateway/internal/handler/: middleware.go  middleware_test.go  websocket.go
gateway/internal/rpc/: client.go
gateway/internal/rpc/pb/: game.pb.go  game_grpc.pb.go
gateway/internal/storage/: redis.go
infra/: ecs.tf  elasticache.tf  main.tf  rds.tf  variables.tf
proto/: game.pb.go  game.proto  game_grpc.pb.go
web/: .env.production  Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  index.css
web/src/components/: ChatWindow.tsx  DetectiveChecklist.tsx  ScenarioDashboard.tsx  ScoreMeter.tsx
web/src/hooks/: useWebSocket.ts
web/src/types/: index.ts
