[project]
name = "ai-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.9"
dependencies = [
    "fastapi>=0.135.1",
    "grpcio-tools>=1.78.0",
    "langchain>=1.2.10",
    "langchain-openai>=1.1.10",
    "pydantic>=2.12.5",
    "sqlalchemy>=2.0.48",
]

[dependency-groups]
dev = [
    "grpcio-tools>=1.78.0",
    "pytest>=9.0.2",
]
